# pytensor

./: CMakeLists.txt  Dockerfile  setup.py
app/: main.py  tensor.cpp
